--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -6,33 +6,32 @@
     await Html.RenderPartialAsync("_RegisterModal", new Services.ServiceModels.AccountServiceModel());
     await Html.RenderPartialAsync("_ForgotPasswordModal", new LoginViewModel());
 }
-<div class="relative flex h-screen items-center justify-center">
+<div class="relative">
     <img src="~/img/loginBG.png" alt="loginBG" class="-z-0 absolute inset-0 h-full w-full object-cover" />
-
     <div class="bg-opacity-0 flex min-h-screen w-full items-center bg-white pt-14 text-[#7A1515]">
         <form method="post" action="/Account/Login" id="loginForm" class="relative ml-28 flex flex-col rounded-md bg-white p-8" style="max-width: 500px; width: 100%;">
             <div class="pb-0 text-left">
                 <p class="text-4xl font-bold">Sign In</p>
             </div>
-            <div class="pb-3 text-left text-sm font-medium text-black subpixel-antialiased">
-                <p>Don't have an account? <a href="" class="text-[#7A1515] underline" data-toggle="modal" data-target="#registerUserModal">Create Account</a></p>
+            <div class="pb-3 text-left text-sm font-medium text-[#343131] subpixel-antialiased">
+                <p>Don't have an account? <a href="" class="text-[#7A1515] underline hover:text-[#A04747]" data-toggle="modal" data-target="#registerUserModal">Create Account</a></p>
             </div>
-            <div class="mb-3 text-black">
+            <div class="mb-3">
 
-                <label class="mb-1 block font-medium text-[#7A1515]" for="emailInput">Email Address <span class="text-[#7A1515]">*</span></label>
+                <label class="mb-1 block font-medium text-[#A04747]" for="emailInput">Email Address <span class="text-[#A04747]">*</span></label>
                 <input type="email" asp-for="Email" id="emailInput" required
-                       class="w-full rounded-md border border-gray-300 p-2 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" />
+                       class="w-full rounded-md border border-gray-300 p-2 text-[#343131] hover:border-[#A04747] focus:outline-none focus:ring-2 focus:ring-[#A04747] focus:border-transparent" />
             </div>
             <div class="mb-4" style="display:none;">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" />
             </div>
-            <div class="mb-2 text-black">
-                <label class="mb-1 font-medium text-[#7A1515]" for="passwordInput">Password <span class="text-[#7A1515]">*</span></label>
+            <div class="mb-2">
+                <label class="mb-1 font-medium text-[#A04747]" for="passwordInput">Password <span class="text-[#A04747]">*</span></label>
                 <div class="relative">
                     <input type="password" asp-for="Password" id="passwordInput" required
-                           class="w-full rounded-md border border-gray-300 p-2 pr-10 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" />
-                    <button type="button" onclick="togglePasswordVisibility()" class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-500">
+                           class="w-full rounded-md border border-gray-300 p-2 pr-10 text-[#343131] hover:border-[#A04747] focus:outline-none focus:ring-2 focus:ring-[#A04747] focus:border-transparent" />
+                    <button type="button" onclick="togglePasswordVisibility()" class="absolute inset-y-0 right-0 flex items-center px-3 text-gray-500">
                         <!-- Eye Open Icon -->
                         <svg id="eyeOpenIcon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -53,12 +52,12 @@
             </div>
 
             <div class="text-right text-sm font-medium text-black">
-                <p><a href="" data-toggle="modal" data-target="#resetPasswordModal" class="text-[#7A1515] underline">Forgot Password?</a></p>
+                <p><a href="" data-toggle="modal" data-target="#resetPasswordModal" class="text-[#7A1515] underline hover:text-[#A04747]">Forgot Password?</a></p>
             </div>
 
             <div>
                 <button type="submit" id="loginButton" disabled
-                        class="mt-2 flex w-full items-center justify-center rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#7A1515] disabled:bg-gray-400 disabled:cursor-not-allowed">
+                        class="mt-2 flex w-full items-center justify-center rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A04747] disabled:bg-gray-400 disabled:cursor-not-allowed">
                     Sign In
                 </button>
             </div>
