--- a/WebApp/Views/Account/_ForgotPasswordModal.cshtml
+++ b/WebApp/Views/Account/_ForgotPasswordModal.cshtml
@@ -3,8 +3,11 @@
 <div class="modal fade" id="resetPasswordModal" tabindex="-1" role="dialog" aria-labelledby="resetPasswordModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="resetPasswordModalLabel">Reset Your Password</h5>
+            <div class="modal-header border-0">
+                <h5 class="modal-title text-[#343131]" id="resetPasswordModalLabel">
+                    <i class="fa-solid fa-key px-1 text-[#A04747]"></i>
+                    Reset Your Password
+                </h5>
                 <button type="button" class="close text-gray-500 hover:text-gray-700" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -13,19 +16,19 @@
             <!-- Password Reset Form -->
             <form id="resetPasswordForm" method="post" action="/Account/Register">
                 @Html.AntiForgeryToken()
-                <div class="modal-body">
-                    <label asp-for="Email" class="block font-medium text-gray-700"></label>
+                <div class="modal-body mt-2 py-1 pl-4 text-[#343131]">
+                    <label asp-for="Email" class="block font-medium text-[#343131]"></label>
                     <input 
                         type="email"
                         asp-for="Email"
-                        class="mt-1 w-full rounded-md border border-gray-300 p-2 focus:outline-none focus:ring-2" 
-                        id="email"
+                           class="mt-1 w-full rounded-md border border-gray-300 p-2 hover:border-[#A04747] focus:outline-none focus:ring-2 focus:ring-[#A04747] focus:border-transparent"
+                           id="email"
                         placeholder="Input your email address" />
                     <span asp-validation-for="Email" class="text-sm text-red-500"></span>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]">Reset</button>
+                <div class="modal-footer mt-2 !border-none">
+                    <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]">Reset</button>
                 </div>
             </form>
         </div>
