--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -21,66 +21,66 @@
                     </div>
 
                     <div class="mb-4">
-                        <label class="mb-1 block font-semibold text-gray-700" for="email">Email Address <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-semibold text-[#343131]" for="email">Email Address <span class="text-[#A04747]">*</span></label>
                         <input type="text" id="email" asp-for="Email" placeholder="juandelacruz@gradsync.com"
-                               class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                        <span asp-validation-for="Email" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
-                        <p class="text-xs font-normal text-[#7A1515]">Please use your institution/company email address.</p>
+                               class="w-full rounded-md border border-gray-300 p-2 hover:border-[#A04747] focus:outline-none focus:ring-2 focus:ring-[#A04747]" />
+                        <span asp-validation-for="Email" class="mt-1 block text-sm text-red-500"></span>
+                        <p class="text-xs font-normal text-[#A04747]">Please use your institution/company email address.</p>
                     </div>
 
                     <div class="mb-4 flex space-x-4">
                         <div class="w-1/2">
-                            <label class="mb-1 block font-semibold text-gray-700" for="firstName">First Name <span class="text-red-500">*</span></label>
+                            <label class="mb-1 block font-semibold text-[#343131]" for="firstName">First Name <span class="text-[#A04747]">*</span></label>
                             <input type="text" id="firstName" asp-for="FirstName" placeholder="Juan"
                                    class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                            <span asp-validation-for="FirstName" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
+                            <span asp-validation-for="FirstName" class="mt-1 block text-sm text-red-500"></span>
                         </div>
                         <div class="w-1/2">
-                            <label class="mb-1 block font-semibold text-gray-700" for="middleName">Middle Name</label>
+                            <label class="mb-1 block font-semibold text-[#343131]" for="middleName">Middle Name</label>
                             <input type="text" id="middleName" asp-for="MiddleName" placeholder="Martinez"
                                    class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                            <span asp-validation-for="MiddleName" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
+                            <span asp-validation-for="MiddleName" class="mt-1 block text-sm text-red-500"></span>
                         </div>
                     </div>
 
                     <div class="mb-4 flex space-x-4">
                         <div class="w-1/2">
-                            <label class="mb-1 block font-semibold text-gray-700" for="lastName">Last Name <span class="text-red-500">*</span></label>
+                            <label class="mb-1 block font-semibold text-[#343131]" for="lastName">Last Name <span class="text-[#A04747]">*</span></label>
                             <input type="text" id="lastName" asp-for="LastName" placeholder="Dela Cruz"
                                    class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                            <span asp-validation-for="LastName" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
+                            <span asp-validation-for="LastName" class="mt-1 block text-sm text-red-500"></span>
                         </div>
                         <div class="w-1/2">
-                            <label class="mb-1 block font-semibold text-gray-700" for="suffix">Suffix</label>
+                            <label class="mb-1 block font-semibold text-[#343131]" for="suffix">Suffix</label>
                             <input type="text" id="suffix" asp-for="Suffix" placeholder="Jr., Sr., III..."
                                    class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                            <span asp-validation-for="Suffix" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
+                            <span asp-validation-for="Suffix" class="mt-1 block text-sm text-red-500"></span>
                         </div>
                     </div>
 
                     <div class="mb-4">
-                        <label class="mb-1 block font-semibold text-gray-700" for="password">Password <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-semibold text-[#343131]" for="password">Password <span class="text-[#A04747]">*</span></label>
                         <input type="password" id="password" asp-for="Password" placeholder="******"
                                class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                        <span asp-validation-for="Password" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
+                        <span asp-validation-for="Password" class="mt-1 block text-sm text-red-500"></span>
                     </div>
                     <div class="mb-4">
-                        <label class="mb-1 block font-semibold text-gray-700" for="confirmpassword">Confirm Password <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-semibold text-[#343131]" for="confirmpassword">Confirm Password <span class="text-[#A04747]">*</span></label>
                         <input type="password" id="confirmpassword" asp-for="ConfirmPassword" placeholder="******"
                                class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
-                        <span asp-validation-for="ConfirmPassword" class="mt-1 block text-sm font-medium text-[#7A1515]"></span>
+                        <span asp-validation-for="ConfirmPassword" class="mt-1 block text-sm text-red-500"></span>
                     </div>
                 </div>
 
                 <div class="modal-footer flex w-full items-center justify-between">
                     <div class="flex w-full items-center">
                         <input type="checkbox"  id="roleCheckbox" asp-for="AsRecruiter" value="true"
-                               class="h-5 w-5 cursor-pointer rounded border-[#7A1515] transition-all duration-300 checked:border-[#7A1515] focus:ring-2 focus:ring-[#991b1b] required:checked:bg-[#7A1515]"/>
-                        <label for="roleCheckbox" class="ml-2 cursor-pointer pt-2 font-bold text-[#7A1515]">Apply as recruiter</label>
+                               class="h-5 w-5 cursor-pointer rounded transition-all duration-300 focus:ring-0" />
+                        <label for="roleCheckbox" class="ml-2 cursor-pointer pt-2 font-semibold text-[#343131]">Apply as recruiter</label>
                     </div>
 
                     <button type="submit" id="registerButton" disabled
-                            class="whitespace-nowrap rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D] disabled:bg-gray-400 disabled:cursor-not-allowed">
+                            class="min-w-[128px] whitespace-nowrap rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A04747] disabled:bg-gray-400 disabled:cursor-not-allowed">
                         Sign Up
                     </button>
                 </div>
@@ -90,7 +90,3 @@
         </div>
     </div>
 </div>
-
-@section Scripts {
-    <script src="~/js/account.js"></script>
-}
