--- a/WebApp/Views/Job/_JobTableHeader.cshtml
+++ b/WebApp/Views/Job/_JobTableHeader.cshtml
@@ -26,16 +26,16 @@
 }
 
 <tr>
-    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         @Html.DisplayNameFor(model => model.First().Title)
     </th>
 
     @if (!User.IsInRole("Recruiter"))
     {   
         <!-- Company Column (with dropdown) -->
-        <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+        <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
             <div class="dropdown relative">
-                <a class="cursor-pointer text-gray-500" href="#" id="companyDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByCompany) ? "text-[#A04747]" : "")" href="#" id="companyDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     @if (filterByCompany == null)
                     {
                         @Html.DisplayNameFor(model => model.First().Company)
@@ -47,7 +47,7 @@
                     <i class="fa-solid fa-chevron-down"></i>
                 </a>
 
-                <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-gray-700" aria-labelledby="companyDropdown">
+                <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="companyDropdown">
                     <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
                        asp-action="@aspAction"
                        asp-route-sortBy="@sortBy"
@@ -78,15 +78,19 @@
     }
     else
     {
-        <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+        <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
             @Html.DisplayNameFor(model => model.First().AvailableSlots)
         </th>
     }
 
     <!-- Employment Type Column (with dropdown) -->
-    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-gray-500" href="#" id="employmentTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByEmploymentType) ? "text-[#A04747]" : "")"
+                href="#" id="employmentTypeDropdown" 
+                data-toggle="dropdown" 
+                aria-haspopup="true" 
+                aria-expanded="false">
                 @if (string.IsNullOrEmpty(filterByEmploymentType))
                 {
                     @Html.DisplayNameFor(model => model.First().EmploymentType)
@@ -97,7 +101,7 @@
                 }
                 <i class="fa-solid fa-chevron-down"></i>
             </a>
-            <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-gray-700" aria-labelledby="employmentTypeDropdown">
+            <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="employmentTypeDropdown">
                 <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
                    asp-action="@aspAction"
                    asp-route-sortBy="@sortBy"
@@ -125,9 +129,9 @@
     </th>
 
     <!-- Status Type Column (with dropdown) -->
-    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-gray-500" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByStatusType) ? "text-[#A04747]" : "")" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 @if (string.IsNullOrEmpty(filterByStatusType))
                 {
                     @Html.DisplayNameFor(model => model.First().StatusType)
@@ -138,7 +142,7 @@
                 }
                 <i class="fa-solid fa-chevron-down"></i>
             </a>
-            <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-gray-700" aria-labelledby="statusTypeDropdown">
+            <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="statusTypeDropdown">
                 <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
                    asp-action="@aspAction"
                    asp-route-sortBy="@sortBy"
@@ -166,9 +170,13 @@
     </th>
 
     <!-- Work Setup Column (with dropdown) -->
-    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-gray-500" href="#" id="workSetupDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="cursor-pointer text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(!string.IsNullOrEmpty(filterByWorkSetup) ? "text-[#A04747]" : "")" 
+                href="#" id="workSetupDropdown" 
+                data-toggle="dropdown" 
+                aria-haspopup="true" 
+                aria-expanded="false">
                 @if (string.IsNullOrEmpty(filterByWorkSetup))
                 {
                     @Html.DisplayNameFor(model => model.First().SetupType)
@@ -179,7 +187,7 @@
                 }
                 <i class="fa-solid fa-chevron-down"></i>
             </a>
-            <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-gray-700" aria-labelledby="workSetupDropdown">
+            <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-[#625f5f]" aria-labelledby="workSetupDropdown">
                 <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
                    asp-action="@aspAction"
                    asp-route-sortBy="@sortBy"
@@ -207,7 +215,7 @@
     </th>
 
     <!-- CreatedDate Column (sortable) -->
-    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">
         <a asp-action="@aspAction"
            asp-route-sortBy="@sortByCreatedDate"
            asp-route-search="@search"
@@ -215,11 +223,11 @@
            asp-route-filterByEmploymentType="@filterByEmploymentType"
            asp-route-filterByStatusType="@filterByStatusType"
            asp-route-filterByWorkSetup="@filterByWorkSetup"
-           class="text-black">
+           class="text-[#625f5f] hover:!no-underline hover:text-[#A04747] @(sortBy == "created_asc" || sortBy == "created_desc"? "text-[#A04747]" : "")">
             @Html.DisplayNameFor(model => model.First().CreatedDate)
             @(sortBy == "created_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "created_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
         </a>
     </th>
     <!-- Actiion-->
-    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">Action</th>
+    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-[#625f5f]">Action</th>
 </tr>
