--- a/WebApp/Views/Job/_UnarchiveJobModal.cshtml
+++ b/WebApp/Views/Job/_UnarchiveJobModal.cshtml
@@ -2,16 +2,16 @@
 @using Data.Models;
 
 <div class="modal fade" id="unarchiveJobModal" tabindex="-1" role="dialog" aria-labelledby="unarchiveJobModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="unarchiveJobModalLabel">Unarchive Job</h5>
+            <div class="modal-header border-0">
+                <h5 class="modal-title text-[#343131]" id="unarchiveJobModalLabel">Unarchive Job</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeUnarchiveJobModal">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
-            <div class="modal-body max-h-[calc(96vh-200px)] flex-grow overflow-y-auto">
+            <div class="modal-body mt-2 py-1 pl-4 text-[#343131]">
                 <form id="unarchiveJobForm" class="rounded-lg p-2">
                     @Html.AntiForgeryToken()
                     <div class="space-y-6">
@@ -26,9 +26,9 @@
                 </form>
             </div>
 
-            <div class="modal-footer">
-                <button type="button" class="rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUnarchiveJob" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitUnarchiveJob()">Unarchive</button>
+            <div class="modal-footer mt-2 !border-none">
+                <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUnarchiveJob" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]" onclick="submitUnarchiveJob()">Unarchive</button>
             </div>
         </div>
     </div>
