--- a/WebApp/Views/Job/_UpdateStatusModal.cshtml
+++ b/WebApp/Views/Job/_UpdateStatusModal.cshtml
@@ -9,21 +9,23 @@
     }
 }
 <div class="modal fade" id="updateJobStatusModal" tabindex="-1" role="dialog" aria-labelledby="updateJobStatusModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="updateJobStatusModalLabel">Update Status</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeUpdateJobStatusModal">
-                    <span aria-hidden="true">&times;</span>
+            <div class="modal-header border-0">
+                <h5 class="modal-title text-[#343131]" id="updateJobStatusModalLabel">
+                    Update Status
+                </h5>
+                <button type="button" class="close" data-dismiss="modal">
+                    <span>&times;</span>
                 </button>
             </div>
 
-            <div class="modal-body max-h-[calc(96vh-200px)] flex-grow overflow-y-auto">
+            <div class="modal-body mt-2 py-1 pl-4 text-[#343131]">
                 <form id="updateJobStatusForm" class="rounded-lg p-2">
                     @Html.AntiForgeryToken()
                     <div class="space-y-6">
                         <div class="flex-1">
-                            <label class="block text-sm font-medium text-gray-700">Status Type</label>
+                            <label class="block text-sm font-medium text-[#343131]">Status Type</label>
                             <select class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="updateJobStatus" name="statusTypeId">
                                 @foreach (var status in statusTypes)
                                 {
@@ -37,9 +39,9 @@
                 </form>
             </div>
 
-            <div class="modal-footer">
-                <button type="button" class="rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUpdateJobStatus" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitUpdateJobStatus()">Update</button>
+            <div class="modal-footer mt-2 !border-none">
+                <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelUpdateJobStatus" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]" onclick="submitUpdateJobStatus()">Update</button>
             </div>
         </div>
     </div>
