--- a/WebApp/Views/Shared/Components/SearchInput/Default.cshtml
+++ b/WebApp/Views/Shared/Components/SearchInput/Default.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="flex">
     <input type="text"
            name="search"
-           class="border-r-0 rounded-l-md rounded-r-none border border-[#7A1515] bg-white px-4 py-2 text-gray-800 shadow-sm transition duration-300 ease-in-out placeholder:text-xs hover:border-[#A53D3D] focus:outline-none focus:ring-2 focus:ring-[#A53D3D]"
+           class="border-r-0 rounded-l-md rounded-r-none border border-[#7A1515] bg-white px-4 py-2 text-gray-800 shadow-sm transition duration-300 ease-in-out placeholder:text-xs hover:border-[#A04747] focus:outline-none focus:ring-2 focus:ring-[#A04747]"
            placeholder="@ViewData["Placeholder"]"
            value="@ViewData["SearchValue"]" />
     <button type="submit"
-            class="border-l-0 rounded-l-none rounded-r-md bg-[#7A1515] px-4 py-2 font-semibold text-white shadow-sm hover:bg-[#A53D3D]">
+            class="border-l-0 rounded-l-none rounded-r-md bg-[#7A1515] px-4 py-2 font-semibold text-white shadow-sm hover:bg-[#A04747]">
         <i class="fa fa-search"></i>
     </button>
 </div>
