--- a/WebApp/Views/Shared/_DeleteModal.cshtml
+++ b/WebApp/Views/Shared/_DeleteModal.cshtml
@@ -2,20 +2,20 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header border-0">
-                <h5 class="modal-title" id="deleteModalLabel">
-                    <i class="fa fa-exclamation-triangle px-1" style="color: var(--danger-color);"></i>
+                <h5 class="modal-title text-[#343131]" id="deleteModalLabel">
+                    <i class="fa fa-exclamation-triangle px-1 text-[#A04747]"></i>
                     Confirm Delete
                 </h5>
                 <button type="button" class="close" data-dismiss="modal">
                     <span>&times;</span>
                 </button>
             </div>
-            <div class="modal-body pl-4 py-1" id="deleteModalMessage">
+            <div class="modal-body mt-2 py-1 pl-4 text-[#343131]" id="deleteModalMessage">
                 Are you sure you want to delete this item?
             </div>
-            <div class="modal-footer">
-                <button type="button" class="bg-[#6c757d] text-white font-medium px-3 py-2 rounded-md hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
-                <button type="button" class="bg-[#7A1515] text-white font-medium px-3 py-2 rounded-md hover:bg-[#A53D3D]" id="confirmDeleteBtn">Delete</button>
+            <div class="modal-footer mt-2 !border-none">
+                <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
+                <button type="button" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" id="confirmDeleteBtn">Delete</button>
             </div>
         </div>
     </div>
