--- a/WebApp/Views/Shared/_LogoutModal.cshtml
+++ b/WebApp/Views/Shared/_LogoutModal.cshtml
@@ -2,21 +2,21 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header border-0">
-                <h5 class="modal-title flex items-center" id="logoutModalLabel">
-                    <i class="fa fa-hourglass-half mr-2"></i>
+                <h5 class="modal-title text-[#343131]" id="logoutModalLabel">
+                    <i class="fa fa-hourglass-half px-1 text-[#A04747]"></i>
                     Log out
                 </h5>
-                <button type="button" class="close text-gray-500 hover:text-gray-700" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body py-1 pl-4">
+            <div class="modal-body mt-2 py-1 pl-4 text-[#343131]">
                 <p>Are you sure you want to log out?</p>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="rounded bg-gray-500 px-4 py-2 font-semibold text-white hover:bg-gray-600" data-dismiss="modal">Cancel</button>
+            <div class="modal-footer mt-2 !border-none">
+                <button type="button" class="min-w-[128px] rounded bg-[#6c757d] px-4 py-2 font-semibold text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
                 <form asp-action="SignOutUser" asp-controller="Account" method="post" id="signOutForm">
-                    <button type="submit" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D] disabled:bg-gray-400 disabled:cursor-not-allowed" id="signOutButton">
+                    <button type="submit" class="min-w-[128px] rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A04747] disabled:bg-gray-400 disabled:cursor-not-allowed" id="signOutButton">
                         Confirm
                     </button>
                 </form>
