--- a/WebApp/Views/User/_AddUserModal.cshtml
+++ b/WebApp/Views/User/_AddUserModal.cshtml
@@ -9,7 +9,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="addUserModalLabel">Add User</h5>
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="addUserModalLabel">Create User</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -63,8 +63,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="bg-[#6c757d] text-white font-medium px-3 py-2 rounded-md hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
-                <button type="button" class="bg-[#7A1515] text-white font-medium px-3 py-2 rounded-md hover:bg-[#A53D3D]" onclick="submitAddUser()">Create</button>
+                <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
+                <button type="button" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitAddUser()">Create</button>
             </div>
         </div>
     </div>
