--- a/WebApp/Views/User/_EditUserModal.cshtml
+++ b/WebApp/Views/User/_EditUserModal.cshtml
@@ -66,8 +66,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="bg-[#6c757d] text-white font-medium px-3 py-2 rounded-md hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
-                <button type="button" class="bg-[#7A1515] text-white font-medium px-3 py-2 rounded-md hover:bg-[#A53D3D]" onclick="submitEditUser()">Save changes</button>
+                <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" data-dismiss="modal">Cancel</button>
+                <button type="button" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitEditUser()">Update</button>
             </div>
         </div>
     </div>
